--- a/2_data_preprocessing/bike_share_data_preprocessing.ipynb
+++ b/2_data_preprocessing/bike_share_data_preprocessing.ipynb
@@ -3129,10 +3129,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "id": "eed834e0",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\Dell\\AppData\\Local\\Temp\\ipykernel_15728\\2792907029.py:1: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  rides_df['birth_year'] = rides_df['birth_year'].fillna(0)\n",
+      "C:\\Users\\Dell\\AppData\\Local\\Temp\\ipykernel_15728\\2792907029.py:2: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  rides_df['birth_year'] = rides_df['birth_year'].replace('', 0)\n",
+      "C:\\Users\\Dell\\AppData\\Local\\Temp\\ipykernel_15728\\2792907029.py:3: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  rides_df['birth_year'] = rides_df['birth_year'].astype(int)\n",
+      "C:\\Users\\Dell\\AppData\\Local\\Temp\\ipykernel_15728\\2792907029.py:4: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  rides_df['birth_year'] = rides_df['birth_year'].replace(0, '')\n"
+     ]
+    }
+   ],
    "source": [
     "rides_df['birth_year'] = rides_df['birth_year'].fillna(0)\n",
     "rides_df['birth_year'] = rides_df['birth_year'].replace('', 0)\n",
