--- a/2_data_preprocessing/bike_share_data_preprocessing.ipynb
+++ b/2_data_preprocessing/bike_share_data_preprocessing.ipynb
@@ -3165,6 +3165,7 @@
     }
    ],
    "source": [
+    "rides_df = rides_df.copy()\n",
     "rides_df['birth_year'] = rides_df['birth_year'].fillna(0)\n",
     "rides_df['birth_year'] = rides_df['birth_year'].replace('', 0)\n",
     "rides_df['birth_year'] = rides_df['birth_year'].astype(int)\n",
