removing the api key

--- a/2_data_preprocessing/bike_share_data_preprocessing.ipynb
+++ b/2_data_preprocessing/bike_share_data_preprocessing.ipynb
@@ -1975,7 +1975,7 @@
     }
    ],
    "source": [
-    "key = '7b5eda2beb33494cb6310fb5ffd0489e'\n",
+    "key = 'insert your key here'\n",
     "geocoder = OpenCageGeocode(key)\n",
     "\n",
     "station_latitude_lst = stations['station_latitude'].tolist()\n",
